--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -1,1 +1,86 @@
+<!doctype html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>D3 Course Assignment 1</title>
+    <link rel="stylesheet" href="main.css">
+</head>
 
+<body>
+<h1>作業一</h1>
+<h3>學員：柯皓翔</h3>
+
+<hr>
+
+<h3 class="exercise">例題1</h3>
+關&nbsp;&nbsp;關&nbsp;&nbsp;雎&nbsp;&nbsp;鳩<br>
+在&nbsp;&nbsp;河&nbsp;&nbsp;之&nbsp;&nbsp;洲<br>
+窈&nbsp;&nbsp;窕&nbsp;&nbsp;淑&nbsp;&nbsp;女<br>
+君&nbsp;&nbsp;子&nbsp;&nbsp;好&nbsp;&nbsp;逑<br>
+<br>
+詩．周南．關睢
+
+<hr>
+
+<h3 class="exercise">例題2</h3>
+<h1>小王子</h1>
+<p>然後他又回到狐狸那裡。</p>
+<p>「再見了！」小王子說。</p>
+<p>「再見了！」狐狸說。</p>
+<blockquote>「我的秘密很簡單：<strong>唯有心才能看得清楚，眼睛是看不到真正重要的東西的</strong>。」</blockquote>
+<p>小王子複述一遍：「真正的東西不是用眼睛可以看得到的。」</p>
+
+<hr>
+
+<h3 class="exercise">例題3</h3>
+<table border="1">
+  <tr>
+    <td colspan="4" class="title">直轄市長辦公地址</td>
+  </tr>
+  <tr class="category">
+    <td class>直轄市</td>
+    <td>職稱</td>
+    <td>姓名</td>
+    <td>辦公地址</td>
+  </tr>
+  <tr>
+    <td class="c1">臺北市</td>
+    <td rowspan="6" class="c2">市長</td>
+    <td class="c3">柯文哲</td>
+    <td class="c4"><a href="https://goo.gl/maps/V7rSj6t4RcC2" target="_new">臺北市信義區西村里市府路1號</a></td>
+  </tr>
+  <tr>
+    <td class="c1">高雄市</td>
+    <td class="c3">陳菊</td>
+    <td class="c4"><a href="https://goo.gl/maps/JJ3KxHPX4LH2" target="_new">高雄市苓雅區晴朗里四維3路2號</a></td>
+  </tr>
+  <tr>
+    <td class="c1">新北市</td>
+    <td class="c3">朱立倫</td>
+    <td class="c4"><a href="https://goo.gl/maps/dzCWznAA6UK2" target="_new">新北市板橋區中山路1段161號</a></td>
+  </tr>
+  <tr>
+    <td class="c1">臺中市</td>
+    <td class="c3">林佳龍</td>
+    <td class="c4"><a href="https://goo.gl/maps/3i7Pni1rxNu" target="_new">臺中市西屯區臺灣大道3段99號</a></td>
+  </tr>
+  <tr>
+    <td class="c1">臺南市</td>
+    <td class="c3">賴清德</td>
+    <td class="c4"><a href="https://goo.gl/maps/J37nZqH31dr" target="_new">臺南市安平區永華路2段6號</a></td>
+  </tr>
+  <tr>
+    <td class="c1">桃園市</td>
+    <td class="c3">鄭文燦</td>
+    <td class="c4"><a href="https://goo.gl/maps/BAS8Do2Efes" target="_new">桃園市桃園區光興里縣府路1號</a></td>
+  </tr>
+</table>
+
+<hr>
+
+<h3 class="exercise">例題4</h3>
+<a href="http://www.google.com/doodles/evidence-of-water-found-on-mars" target="_new"><img src="http://www.google.com/logos/doodles/2015/evidence-of-water-found-on-mars-5652760466817024.2-hp2x.gif" alt="在火星上發現水存在的證據" width="100%"></a>
+
+</body>
+
+</html>
