--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -81,6 +81,7 @@
 <h3 class="exercise">例題4</h3>
 <a href="http://www.google.com/doodles/evidence-of-water-found-on-mars" target="_new"><img src="http://www.google.com/logos/doodles/2015/evidence-of-water-found-on-mars-5652760466817024.2-hp2x.gif" alt="在火星上發現水存在的證據" width="100%"></a>
 
+<p>updated:2017.07.09 18:00</p>
 </body>
 
 </html>
