--- a/final_project/leaflet_map.html
+++ b/final_project/leaflet_map.html
@@ -3,15 +3,17 @@
 <head>
 	<title>d3.js with leaflet.js</title>
 
-    <link 
-        rel="stylesheet" 
-        href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css"
-    />
+   <!--   避免安全設定問題-->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"
+  integrity="sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw=="
+  crossorigin=""/>
+
     <script src="http://d3js.org/d3.v3.min.js"></script>
 
-    <script
-        src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js">
-    </script>
+   <!--   避免安全設定問題-->
+    <script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"
+  integrity="sha512-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K7YzW1zJ7XyJV/TT1MrdXvMcA=="
+  crossorigin=""></script>
     
 </head>
 <body>
@@ -27,7 +29,8 @@
 
 	<script type="text/javascript">
 
-        var map = L.map('map').setView([23.583234, 120.5825975], 7);
+        var map = L.map('map');
+        map.setView([23.583234, 120.5825975], 7);
         mapLink = 
             '<a href="http://openstreetmap.org">OpenStreetMap</a>';
         L.tileLayer(
@@ -37,7 +40,7 @@
             }).addTo(map);
 				
 	/* Initialize the SVG layer */
-	map._initPathRoot()    
+	L.svg().addTo(map);  //不要用原本網路上的寫法map._initPathRoot()，好像過時已不支援
 
 	/* We simply pick up the SVG from the map object */
 	var svg = d3.select("#map").select("svg"),
