--- a/final_project/leaflet_map.html
+++ b/final_project/leaflet_map.html
@@ -8,7 +8,8 @@
   integrity="sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw=="
   crossorigin=""/>
 
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
+
 
    <!--   避免安全設定問題-->
     <script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"
