--- a/final_project/index3.html
+++ b/final_project/index3.html
@@ -146,7 +146,7 @@
                                     透過checkbox勾選來過濾、更新資料集    
                                     </h3>
                                     <br>
-                                    <p>因為探索資料的介面適合多選，以做一些交叉的分析，所以我先透過病毒種類的欄位建立五個不同的子資料集。然後我們再開一個空的陣列，用來存最新條件下的資料。每一次觸發事件後就會根據現在狀態刷新資料集，一步步concate在一起。</p>
+                                    <p>因為探索資料的介面適合多選，以做一些交叉的分析，所以我先透過病毒種類的欄位建立五個不同的子資料集。然後我們再開一個空的陣列，用來存最新條件下的資料。每一次觸發事件後就會根據現在狀態刷新資料集，一步步concate在一起。另外也透過rollup來匯總資料，以各縣市為key，value是案例數。</p>
                                     <br>
                                     <h3>
                                     時間如何去做篩選？    
@@ -157,7 +157,7 @@
                                     <br>
                                     <h3>從細節提升質感</h3>
                                     <br>
-                                    <p>這次有加上了幾個細節，希望可以讓操作上更直觀跟美觀。例如在滑鼠滑過地圖時，不只有提示框出現，還讓讓泡泡變色；圓餅圖也同要調整了透明度；另外因為原本字都填上時，最後面比較比較小的幾塊會發生字疊字狀況，所以我們可以從去抓endAngle還有startAngle，兩者之差就是該扇形的角度，因為一圈2PI是360度，大概觀察後發現角度20度以上才放文字比較好，所以我們就再加上一個條件是endAngle-startAngle>=Math.PI*2/18，只讓符合者加入文字即可。</p>
+                                    <p>這次有加上了幾個細節，希望可以讓操作上更直觀跟美觀。例如在滑鼠滑過地圖時，不只有提示框出現，還讓讓泡泡變色；圓餅圖也同要調整了透明度；另外因為原本字都填上時，最後面比較比較小的幾塊會發生字疊字狀況，所以我們可以從去抓endAngle還有startAngle，兩者之差就是該扇形的角度，因為一圈2PI是360度，大概觀察後發現角度20度以上才放文字比較好，所以我們就再加上一個條件是endAngle-startAngle>=Math().PI*2/18，只讓符合者加入文字即可。</p>
                                     
                                     <h3>那些尚待解決的問題</h3>
                                     <br>
