--- a/final_project/index3.html
+++ b/final_project/index3.html
@@ -158,7 +158,7 @@
                                     <h3>從細節提升質感</h3>
                                     <br>
                                     <p>這次有加上了幾個細節，希望可以讓操作上更直觀跟美觀。例如在滑鼠滑過地圖時，不只有提示框出現，還讓讓泡泡變色；圓餅圖也同要調整了透明度；另外因為原本字都填上時，最後面比較比較小的幾塊會發生字疊字狀況，所以我們可以從去抓endAngle還有startAngle，兩者之差就是該扇形的角度，因為一圈2PI是360度，大概觀察後發現角度20度以上才放文字比較好，所以我們就再加上一個條件是endAngle-startAngle>=Math().PI*2/18，只讓符合者加入文字即可。</p>
-                                    
+                                    <br>
                                     <h3>那些尚待解決的問題</h3>
                                     <br>
                                     <p>我們拿到的這些資料，在資料清洗的步驟時就已經修正大部分形式上的錯誤，可能是拼字等等，但是「內容」的錯誤我們卻不容易察覺。</p>
@@ -166,6 +166,8 @@
                                     <p>也是到後來把資料畫在地圖上後，我們發現有些資料明顯有經緯度上的問題，一個在桃園外海、一個跑去非洲一帶了。如果再用後來建立提示框隨機瀏覽幾個資料也會發現，有疑似經緯度錯誤的狀況。</p>
                                     <br>
                                     <p>這些問題可能也涉及當初資料記錄的問題，不知道有沒有方法能夠先把全部的資料去核對它的經緯度，如果是有問題的資料我們就予以刪除。</p>
+                                    <br>
+                                    <p>還有一個可以研究的問題是有關tooltip的位置，原本是想要出現在泡泡旁邊，但寫出來後如果縮放是正常的效果，但如果平移就會開始跑掉，可能要再把leaflet圖層的移動值抓出來加上去。</p>
                                     <br>
                                     <h3>資料視覺化的對自己的意義</h3>
                                     <br>
